deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docapp
  namespace: doctor-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docapp
  template:
    metadata:
      labels:
        app: docapp
    spec:
      containers:
      - name: docapp
        image: docker.io/mokshitgupta/docapp:1   # updated by Jenkins
        ports:
        - containerPort: 8000
